manifests/showks-form/manifest.yaml
---
# Source: showks-form/templates/role.yaml
---
# Source: showks-form/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-form-temp
  namespace: showks-system
  labels:
    app: showks-form-temp
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: app-port
  selector:
    app: showks-form-temp

---
# Source: showks-form/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-form-temp
  labels:
    app: showks-form-temp
  namespace: showks-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-form-temp
  template:
    metadata:
      labels:
        app: showks-form-temp
    spec:
      containers:
      - name: showks-form-temp
        image: cloudnativedaysjp/showks-form:stg-4c8a5448a0bf0cd655908b1c869b9ee113b6af1c
        ports:
        - containerPort: 3000
