manifests/showks-form/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-form
  namespace: showks-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "showks-form-temp"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - form.showks.cloudnativedays.jp
      secretName: tls-certificate-wildcard
  rules:
  - host: form.showks.cloudnativedays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-form-temp
          servicePort: 3000
